fixed signal handling, moved heredoc to child process

--- a/history
+++ b/history
@@ -732,3 +732,118 @@ exit <aksjddkaf
 exit
 exit <aksjddkaf | exit <asdad
 exit
+./minishell
+./minishell
+<<1
+cat
+cat
+exit
+cat
+cat
+cat
+cat <<1
+<<1
+<<1
+<<1
+<<1
+exit
+<<1
+cat
+exit
+<<1
+cat <<1
+cat <<1
+cat
+cat
+cat
+cat <<1
+cat <<1
+cat <<1
+cat
+exit
+<<1
+<<1
+<<1
+<<1
+cat
+<<1
+exit
+<<1
+<<1
+<<1
+<<1
+<<1
+cat
+cat
+<<1
+exit
+<<1
+cat
+exit
+mkdir kansio
+chmod 000 kansio
+cd kansio
+exit
+cd kansio
+exit
+cd kansio
+exit
+<<1
+cat
+exit
+cat
+<<1
+cat
+exit
+cat
+exit
+cat
+exit
+cat
+<<1
+<<1
+<<1
+cat <<asd
+exit
+cat <<a
+exit
+cat <<a
+cat <<a | cat <<b
+exit
+ls
+cat <<a
+cat <<a
+cat <<a
+make
+cat <<a
+exit
+cat <<a
+exit
+<<a
+<<a
+cat <<a
+exit
+<<a
+cat <<a
+cat
+cat
+cat <<a
+cat <<a
+<<a
+<<a
+cat <<a
+cat <<a
+cat <<a
+cat
+cat
+cat
+cat
+<<a
+<<a
+<<a
+exit
+cat <<a
+cat <<a
+<<a
+cat <<a
+exit
